2014-01-30  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup.php
	  operation/incidents/incident_detail.php: Fixed bugs.

2014-01-29  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  integria_dbdata.sql
	  godmode/setup/incidents_setup.php
	  include/functions_calendar.php
	  include/functions_db.php
	  include/functions_forms.php
	  include/functions_incidents.php
	  include/functions_user.php
	  include/functions_workunits.php
	  include/ajax/incidents.php
	  include/js/integria_incidents_search.js
	  include/styles/calendar.css
	  operation/incidents/incident_dashboard_detail.php
	  operation/incidents/incident_search_login.php
	  operation/incidents/incident_type_field.php
	  operation/leads/lead_detail.php
	  operation/projects/project_detail.php
	  operation/slas/sla_detail.php
	  operation/user_report/report_annual.php
	  operation/users/user_spare_workunit.php: Fixed several bugs.

	* operation/user_report/annual_workunits.php
	  extras/mr/3.sql: Added files.

2014-01-28  Sancho Lerena <slerena@artica.es>

	* operation/leads/template_manager.php: Fixed ACL problem due 
	a bad ID passed to ACL function.

2014-01-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Added the functions
	"crm_get_total_invoiced_graph", "crm_get_managers_invoicing",
	"crm_get_managers_invoicing_graph" and
	"crm_print_most_invoicing_managers".

	* operation/companies/company_detail.php: Minor fixes.

	* operation/companies/company_statistics.php: Fixed some errors
	and added new graphs.
	
2014-01-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/companies/company_detail.php: Fixed the last
	activity filter of the companies list.

2014-01-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_crm.php: Little change on a function call.
	
2014-01-24  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php,
	include/api.php: Added new api functions to manage some