@@ -61,14 +61,14 @@ $check_cron_exec = check_last_cron_execution ();
 $check_email_queue = check_email_queue();
 $result_check_update_manager = '';
 $check_alarm_calendar = check_alarm_calendar();
+$check_directory_permissions = check_directory_permissions();
 
 if ($is_login && dame_admin($config['id_user'])) { //check if user has logged and user is admin. Check update manager once.
 	$result_check_update_manager = update_manager_check_online_free_packages (false);
 	print_input_hidden ('result_check_update_manager', $result_check_update_manager);
 }
 
-
-if (!$check_cron_exec || !$check_email_queue || ($result_check_update_manager != '') || ($check_alarm_calendar)) {
+if (!$check_cron_exec || !$check_email_queue || ($result_check_update_manager != '') || ($check_alarm_calendar) || ($check_directory_permissions)) {
 	$got_alerts = 1;
 	echo '<a href: >'.print_image('images/header_warning.png', true, array("onclick" => "openAlerts()","alt" => __('Warning'), "id" => "alerts", 'title' => __('Warning'))).'</a>';
 }
